// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectItem /> should render correctly 1`] = `
[
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bcXGCL gkMwg"
    >
      <a
        className="sc-bcXGCL gudgoe cap-link"
        href="https://capco.dev/admin/alpha/project/project2/edit?_sonata_admin=capco_admin.admin.project&_sonata_name=admin_capco_app_project_edit&_locale=fr-FR"
      >
        Stratégie technologique de l'Etat et services publics
      </a>
      <div
        className="sc-bcXGCL bwuDFj"
      >
        <a
          className="sc-bcXGCL kfWSPh cap-link"
          href="https://capco.dev/themes/immobilier?_locale=fr-FR"
        >
          Immobilier
        </a>
        <span>
          ,   
        </span>
        <a
          className="sc-bcXGCL kfWSPh cap-link"
          href="https://capco.dev/themes/transport?_locale=fr-FR"
        >
          Transport
        </a>
      </div>
    </div>
  </td>,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <a
      className="sc-bcXGCL gudgoe cap-link"
      href="<mock-value-for-field-"url">"
    >
      &lt;mock-value-for-field-"username"&gt;
    </a>
  </td>,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      aria-label="Tag public-everybody"
      className="sc-bcXGCL eQscED cap-tag"
      onBlur={[Function]}
      onFocus={[Function]}
      title="public-everybody"
    >
      public-everybody
    </div>
  </td>,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    30/12/2014
  </td>,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <button
      aria-describedby=":r1:"
      aria-expanded={false}
      aria-haspopup="menu"
      aria-label="global.plus"
      className="sc-bcXGCL cxVtKf cap-buttonQuickAction cap-menu__disclosure"
      id=":r0:"
      onBlur={[Function]}
      onClick={[Function]}
      onClickCapture={[Function]}
      onFocus={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      onKeyPressCapture={[Function]}
      onKeyUp={[Function]}
      onLoadedMetadataCapture={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseMove={[Function]}
    >
      <svg
        aria-hidden="true"
        className="sc-bcXGCL sc-oZHua dXTqeC hQQZty cap-icon cap-buttonQuickAction-icon"
        fill="currentColor"
        height="1em"
        viewBox="0 0 12 4"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.609 0M4.696 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.61 0M9.391 2.087a1.304 1.304 0 1 0 2.61 0 1.304 1.304 0 0 0-2.61 0"
        />
      </svg>
    </button>
    <span
      hidden={true}
      id=":r1:"
      style={
        {
          "position": "fixed",
        }
      }
    />
    <span
      hidden={true}
      id=":r4:"
      style={
        {
          "position": "fixed",
        }
      }
    />
  </td>,
]
`;

exports[`<ProjectItem /> should render correctly without authors 1`] = `
[
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bcXGCL gkMwg"
    >
      <a
        className="sc-bcXGCL gudgoe cap-link"
        href="https://capco.dev/admin/alpha/project/project2/edit?_sonata_admin=capco_admin.admin.project&_sonata_name=admin_capco_app_project_edit&_locale=fr-FR"
      >
        Stratégie technologique de l'Etat et services publics
      </a>
      <div
        className="sc-bcXGCL bwuDFj"
      >
        <a
          className="sc-bcXGCL kfWSPh cap-link"
          href="https://capco.dev/themes/immobilier?_locale=fr-FR"
        >
          Immobilier
        </a>
        <span>
          ,   
        </span>
        <a
          className="sc-bcXGCL kfWSPh cap-link"
          href="https://capco.dev/themes/transport?_locale=fr-FR"
        >
          Transport
        </a>
      </div>
    </div>
  </td>,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <a
      className="sc-bcXGCL gudgoe cap-link"
      href="<mock-value-for-field-"url">"
    >
      &lt;mock-value-for-field-"username"&gt;
    </a>
  </td>,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      aria-label="Tag public-everybody"
      className="sc-bcXGCL eQscED cap-tag"
      onBlur={[Function]}
      onFocus={[Function]}
      title="public-everybody"
    >
      public-everybody
    </div>
  </td>,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    30/12/2014
  </td>,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <button
      aria-describedby=":r8:"
      aria-expanded={false}
      aria-haspopup="menu"
      aria-label="global.plus"
      className="sc-bcXGCL cxVtKf cap-buttonQuickAction cap-menu__disclosure"
      id=":r7:"
      onBlur={[Function]}
      onClick={[Function]}
      onClickCapture={[Function]}
      onFocus={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      onKeyPressCapture={[Function]}
      onKeyUp={[Function]}
      onLoadedMetadataCapture={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseMove={[Function]}
    >
      <svg
        aria-hidden="true"
        className="sc-bcXGCL sc-oZHua dXTqeC hQQZty cap-icon cap-buttonQuickAction-icon"
        fill="currentColor"
        height="1em"
        viewBox="0 0 12 4"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.609 0M4.696 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.61 0M9.391 2.087a1.304 1.304 0 1 0 2.61 0 1.304 1.304 0 0 0-2.61 0"
        />
      </svg>
    </button>
    <span
      hidden={true}
      id=":r8:"
      style={
        {
          "position": "fixed",
        }
      }
    />
    <span
      hidden={true}
      id=":rb:"
      style={
        {
          "position": "fixed",
        }
      }
    />
  </td>,
]
`;

exports[`<ProjectItem /> should render correctly without exportable steps 1`] = `
[
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bcXGCL gkMwg"
    >
      <a
        className="sc-bcXGCL gudgoe cap-link"
        href="https://capco.dev/admin/alpha/project/project2/edit?_sonata_admin=capco_admin.admin.project&_sonata_name=admin_capco_app_project_edit&_locale=fr-FR"
      >
        Stratégie technologique de l'Etat et services publics
      </a>
      <div
        className="sc-bcXGCL bwuDFj"
      >
        <a
          className="sc-bcXGCL kfWSPh cap-link"
          href="https://capco.dev/themes/immobilier?_locale=fr-FR"
        >
          Immobilier
        </a>
        <span>
          ,   
        </span>
        <a
          className="sc-bcXGCL kfWSPh cap-link"
          href="https://capco.dev/themes/transport?_locale=fr-FR"
        >
          Transport
        </a>
      </div>
    </div>
  </td>,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <a
      className="sc-bcXGCL gudgoe cap-link"
      href="<mock-value-for-field-"url">"
    >
      &lt;mock-value-for-field-"username"&gt;
    </a>
  </td>,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      aria-label="Tag public-everybody"
      className="sc-bcXGCL eQscED cap-tag"
      onBlur={[Function]}
      onFocus={[Function]}
      title="public-everybody"
    >
      public-everybody
    </div>
  </td>,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    30/12/2014
  </td>,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <button
      aria-describedby=":rm:"
      aria-expanded={false}
      aria-haspopup="menu"
      aria-label="global.plus"
      className="sc-bcXGCL cxVtKf cap-buttonQuickAction cap-menu__disclosure"
      id=":rl:"
      onBlur={[Function]}
      onClick={[Function]}
      onClickCapture={[Function]}
      onFocus={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      onKeyPressCapture={[Function]}
      onKeyUp={[Function]}
      onLoadedMetadataCapture={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseMove={[Function]}
    >
      <svg
        aria-hidden="true"
        className="sc-bcXGCL sc-oZHua dXTqeC hQQZty cap-icon cap-buttonQuickAction-icon"
        fill="currentColor"
        height="1em"
        viewBox="0 0 12 4"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.609 0M4.696 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.61 0M9.391 2.087a1.304 1.304 0 1 0 2.61 0 1.304 1.304 0 0 0-2.61 0"
        />
      </svg>
    </button>
    <span
      hidden={true}
      id=":rm:"
      style={
        {
          "position": "fixed",
        }
      }
    />
    <span
      hidden={true}
      id=":rp:"
      style={
        {
          "position": "fixed",
        }
      }
    />
  </td>,
]
`;

exports[`<ProjectItem /> should render correctly without themes 1`] = `
[
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bcXGCL gkMwg"
    >
      <a
        className="sc-bcXGCL gudgoe cap-link"
        href="https://capco.dev/admin/alpha/project/project2/edit?_sonata_admin=capco_admin.admin.project&_sonata_name=admin_capco_app_project_edit&_locale=fr-FR"
      >
        Stratégie technologique de l'Etat et services publics
      </a>
      <div
        className="sc-bcXGCL bwuDFj"
      />
    </div>
  </td>,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <a
      className="sc-bcXGCL gudgoe cap-link"
      href="<mock-value-for-field-"url">"
    >
      &lt;mock-value-for-field-"username"&gt;
    </a>
  </td>,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      aria-label="Tag public-everybody"
      className="sc-bcXGCL eQscED cap-tag"
      onBlur={[Function]}
      onFocus={[Function]}
      title="public-everybody"
    >
      public-everybody
    </div>
  </td>,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    30/12/2014
  </td>,
  <td
    className="sc-bcXGCL TOCat cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <button
      aria-describedby=":rf:"
      aria-expanded={false}
      aria-haspopup="menu"
      aria-label="global.plus"
      className="sc-bcXGCL cxVtKf cap-buttonQuickAction cap-menu__disclosure"
      id=":re:"
      onBlur={[Function]}
      onClick={[Function]}
      onClickCapture={[Function]}
      onFocus={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      onKeyPressCapture={[Function]}
      onKeyUp={[Function]}
      onLoadedMetadataCapture={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseMove={[Function]}
    >
      <svg
        aria-hidden="true"
        className="sc-bcXGCL sc-oZHua dXTqeC hQQZty cap-icon cap-buttonQuickAction-icon"
        fill="currentColor"
        height="1em"
        viewBox="0 0 12 4"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.609 0M4.696 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.61 0M9.391 2.087a1.304 1.304 0 1 0 2.61 0 1.304 1.304 0 0 0-2.61 0"
        />
      </svg>
    </button>
    <span
      hidden={true}
      id=":rf:"
      style={
        {
          "position": "fixed",
        }
      }
    />
    <span
      hidden={true}
      id=":ri:"
      style={
        {
          "position": "fixed",
        }
      }
    />
  </td>,
]
`;
